--- a/page1.html
+++ b/page1.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/comp.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Cuprum|Sahitya" rel="stylesheet">
     </head>
     
         <!-- Add your site or application content here -->
