--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Dosis|Noto+Sans|Playfair+Display" rel="stylesheet">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
