--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                         <a class="navbar-brand" href="#">WebSiteName</a>
                         </div>
                              <ul class="nav navbar-nav">
-                                  <li class="active"><a href="#">Home</a></li>
-                                  <li><a href="#">Page 1</a></li>
-                                  <li><a href="#">Page 2</a></li>
-                                  <li><a href="#">Page 3</a></li>
+                                    <li><a href="index.html">Homepage</a></li>
+                                    <li><a href="page1.html">1950s-1960s</a></li>
+                                    <li><a href="page2.html">1960s-1970s</a></li>
+                                    <li><a href="page3.html">1970s-1980s</a></li>
+                                    <li><a href="contact.html">1980s-Present</a></li>
                             </ul>
                       </div>
         </nav>
