--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             
             
             <div class="img">
-                  <a target="_blank" href="img_fjords.jpg">
+                  <a target="_blank" href="../img/Cyberspace.jpg">
                     <img src="../img/Cyberspace.jpg" alt="Trolltunga Norway" width="300" height="200">
                   </a>
                   <div class="desc">Add a description of the image here</div>
