--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Dosis|Noto+Sans|Playfair+Display" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya|Exo:900|PT+Sans" rel="stylesheet">
         <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
