--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Dosis|Noto+Sans|Playfair+Display" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya|Exo:900|PT+Sans" rel="stylesheet">
+        
     </head>
     
         <!-- Add your site or application content here -->
