--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Alegreya|Exo:900|PT+Sans" rel="stylesheet">
     </head>
     
         <!-- Add your site or application content here -->
