--- a/page1.html
+++ b/page1.html
@@ -46,7 +46,7 @@
                     <!-- Paragraphs -->
 					<h3>1957</h3>
                     <h4>USSR Launches Sputnik</h4>
-					<p>Ussr Launches Sputnik into space and, with it, global communication</p>
+					<h5>Ussr Launches Sputnik into space and, with it, global communication</h5>
                     <p><img class="img-responsive" src="http://internethalloffame.org/sites/default/files/SPUTNIK-420x0.jpg" alt=""></p>
 					<hr>
                     
