--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/test.css">
         <link href="https://fonts.googleapis.com/css?family=Alegreya|Exo:900|PT+Sans" rel="stylesheet">
         <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
 
